feat: create website icon

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Convert M3U8 streaming video files to downloadable MP4 format" />
+    <meta name="theme-color" content="#1e293b" />
     <title>M3U8 to MP4 Converter</title>
   </head>
   <body>
